welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: value unary_! is not a member of Unit
  while (!fin()){
         ^DwarfCode:28: error: value unary_! is not a member of Unit
    while (!fin()){
           ^DwarfCode:40: error: not found: value Direction
  if (getDirection()==Direction.est){
                      ^DwarfCode:42: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^DwarfCode:42: warning: enclosing method fin has result type Unit: return value discarded
      return true
      ^DwarfCode:43: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    } else return false
                  ^DwarfCode:43: warning: enclosing method fin has result type Unit: return value discarded
    } else return false
           ^DwarfCode:44: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  } else return false
                ^DwarfCode:44: warning: enclosing method fin has result type Unit: return value discarded
  } else return false
         ^